<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="raspopova.diana.portfolioapp.MainActivity">

    <RelativeLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"/>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appbar"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <Button
                android:id="@+id/buttonMovies"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/button_movies"/>

            <Button
                android:id="@+id/buttonStockHawk"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/button_stock"/>

            <Button
                android:id="@+id/buttonBuildBigger"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/button_build_bigger"/>

            <Button
                android:id="@+id/buttonAppMaterial"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/button_material"/>

            <Button
                android:id="@+id/buttonUbiquitous"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/button_ubiquitous"/>

            <Button
                android:id="@+id/buttonCapstone"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/button_capstone"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
